--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-# dependencies
-.snowpack
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# misc
+node_modules
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# other
+dist
+dist-ssr
+*.local
 .idea
-package-lock.json
