--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "postcss-preset-env": "6.7.0",
         "prettier": "2.2.1",
         "react-use": "17.2.3",
+        "skyway-js": "^4.4.1",
         "tailwindcss": "2.1.1",
         "ts-jest": "26.5.5",
         "typed-css-modules": "^0.6.7",
