--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-use": "17.2.3",
         "skyway-js": "^4.4.1",
         "tailwindcss": "2.1.1",
+        "tone": "^14.7.77",
         "ts-jest": "26.5.5",
         "typed-css-modules": "^0.6.7",
         "typescript": "4.2.4",
