--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "tcm": "tcm -o types/styles src"
     },
     "dependencies": {
+        "@emotion/react": "^11.4.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-router-dom": "^5.2.0",
